--- a/index.html
+++ b/index.html
@@ -1,11 +1,126 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-  </body>
+    <title>Salah - How to</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <style>
+        .carousel-control-next,
+        .carousel-control-prev
+
+        /*, .carousel-indicators */
+            {
+            filter: invert(100%);
+        }
+    </style>
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <h1>
+                    1.Importance of Salah in islaam
+                </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="d-flex justify-content-center">
+                                <div class="card w-75" style="width: 18rem;">
+                                    <div class="card-body">
+                                        <h5 class="card-title">
+                                            A man asked the Prophet (ﷺ) "What deeds are the best?" <br />
+                                            The Prophet (ﷺ) said:
+                                        </h5>
+                                        <p class="card-text">
+                                            To perform the (daily compulsory) prayers at their (early) stated fixed
+                                            times,
+                                            to be good and dutiful to one's own parents, and to participate in Jihad in
+                                            Allah's Cause.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class=" d-flex justify-content-center">
+                                <div class="card w-75" style="width: 18rem;">
+                                    <div class="card-body">
+                                        <h5 class="card-title">
+                                            “The Messenger of Allah (ﷺ) said:
+                                        </h5>
+                                        <p class="card-text">
+                                            The covenant that distinguishes between us and them is prayer; so whoever
+                                            leaves it, he has committed Kufr.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="row mb-3">
+                <div class="col text-center">
+                    <h1>
+                        2.How to perform salah
+                    </h1>
+                </div>
+            </div>
+            <div class="col">
+                <h1>A-how to perform wuduu</h1>
+                <p>
+                    <b>Abu Huraira reported: The Messenger of Allah, peace and blessings be upon him, said,</b> “There is no prayer for one without ablution, and there is no ablution for one without mentioning the name of Allah before it.”
+                </p>
+            </div>
+            <div class="col">
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=iaj1wlQHRFA" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h1>B-how to perform salah</h1>
+                <p>
+                    <b>Once the Prophet (ﷺ) entered the mosque, a man came in, offered the prayer and greeted the Prophet. The Prophet returned his greeting and said to him,
+                    </b> "Go back and pray again for you have not prayed." 
+                    <b>The man offered the prayer again, came back and greeted the Prophet. He said to him thrice, </b>
+                    "Go back and pray again for you have not prayed." 
+                    <b>The man said, </b>"By Him Who has sent you with the truth! I do not know a better way of praying.
+                     Kindly teach Me how to pray." <b>He said, </b>"When you stand for the prayer, say Takbir and then recite from the Qur'an what you know and then bow with calmness till you feel at ease, then rise from bowing till you stand straight. Afterwards prostrate calmly till you feel at ease and then raise (your head) and sit with Calmness till you feel at ease and then prostrate with calmness till you feel at ease in prostration and do the same in the whole of your prayer."
+                </p>
+            </div>
+            <div class="col">
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Xj_3QFJu_3s" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+        <hr />
+    </div>
+</body>
+
 </html>
