--- a/guide.html
+++ b/guide.html
@@ -81,70 +81,29 @@
                     </button>
                 </div>
             </div>
-        </div>
-        <div class="row">
+            <div class="row">
+                <div class="row mb-3">
+                    <div class="col text-center">
+                        <h1>
+                            2.How to perform salah
+                        </h1>
+                    </div>
+                </div>
+            </div>
             <div class="row mb-3">
-                <div class="col text-center">
-                    <h1>
-                        2.How to perform salah
-                    </h1>
+                <div class="col">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./index.html">Video ressources</a>
+                        </li>
+                        <li class="nav-item nav-underline">
+                            <a class="nav-link active" href="">Guide</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="row mb-3">
-            <div class="col">
-                <ul class="nav nav-underline">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Video ressources</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="./guide.html">Guide</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-
-            <div class="col">
-                <h1>A-how to perform wuduu</h1>
-                <p>
-                    <b>Abu Huraira reported: The Messenger of Allah, peace and blessings be upon him, said,</b> “There
-                    is no prayer for one without ablution, and there is no ablution for one without mentioning the name
-                    of Allah before it.”
-                </p>
-            </div>
-            <div class="col">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=iaj1wlQHRFA" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <h1>B-how to perform salah</h1>
-                <p>
-                    <b>Once the Prophet (ﷺ) entered the mosque, a man came in, offered the prayer and greeted the
-                        Prophet. The Prophet returned his greeting and said to him,
-                    </b> "Go back and pray again for you have not prayed."
-                    <b>The man offered the prayer again, came back and greeted the Prophet. He said to him thrice, </b>
-                    "Go back and pray again for you have not prayed."
-                    <b>The man said, </b>"By Him Who has sent you with the truth! I do not know a better way of praying.
-                    Kindly teach Me how to pray." <b>He said, </b>"When you stand for the prayer, say Takbir and then
-                    recite from the Qur'an what you know and then bow with calmness till you feel at ease, then rise
-                    from bowing till you stand straight. Afterwards prostrate calmly till you feel at ease and then
-                    raise (your head) and sit with Calmness till you feel at ease and then prostrate with calmness till
-                    you feel at ease in prostration and do the same in the whole of your prayer."
-                </p>
-            </div>
-            <div class="col">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Xj_3QFJu_3s" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-        </div>
-    </div>
-    <hr />
-    </div>
+        
 </body>
 
 </html>
