added the conditions panel

--- a/guide.html
+++ b/guide.html
@@ -54,6 +54,23 @@
                             </div>
                         </div>
                         <div class="carousel-item">
+                            <div class="d-flex justify-content-center">
+                                <div class="card w-75" style="width: 18rem;">
+                                    <div class="card-body">
+                                        <h5 class="card-title">
+                                            Abu Huraira reported:
+                                            Verily the Messenger of Allah (ﷺ) said:
+                                        </h5>
+                                        <p class="card-text">
+                                            The five (daily) prayers and from one Friday prayer to the (next) Friday
+                                            prayer, and from Ramadhan to Ramadhan are expiations for the (sins)
+                                            committed in between (their intervals) provided one shuns the major sins.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
                             <div class=" d-flex justify-content-center">
                                 <div class="card w-75" style="width: 18rem;">
                                     <div class="card-body">
@@ -102,8 +119,33 @@
                     </ul>
                 </div>
             </div>
+            <div class="row">
+                <div class="col">
+                    <h1>
+                        Chapter 1 : Conditions of salah
+                    </h1>
+                    <p>
+                        Salah has 9 coniditions in order to be valid
+                    </p>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <b class="me-1">Condition 1 : </b> Islam
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    as Allah accepts no deed from the disbeliever.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        
 </body>
 
 </html>
