--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
                             </div>
                         </div>
                         <div class="carousel-item">
+                            <div class="d-flex justify-content-center">
+                                <div class="card w-75" style="width: 18rem;">
+                                    <div class="card-body">
+                                        <h5 class="card-title">
+                                            Abu Huraira reported:
+                                            Verily the Messenger of Allah (ﷺ) said: 
+                                        </h5>
+                                        <p class="card-text">
+                                        The five (daily) prayers and from one Friday prayer to the (next) Friday prayer, and from Ramadhan to Ramadhan are expiations for the (sins) committed in between (their intervals) provided one shuns the major sins.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
                             <div class=" d-flex justify-content-center">
                                 <div class="card w-75" style="width: 18rem;">
                                     <div class="card-body">
@@ -104,7 +119,6 @@
             </div>
         </div>
         <div class="row">
-
             <div class="col">
                 <h1>A-how to perform wuduu</h1>
                 <p>
