finished the conditions section , next is purity

--- a/guide.html
+++ b/guide.html
@@ -125,13 +125,13 @@
                         Chapter 1 : Conditions of salah
                     </h1>
                     <p>
-                        Salah has 9 coniditions in order to be valid
+                        Salah has 9 conditions in order to be valid
                     </p>
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    data-bs-target="#collapseOne" aria-controls="collapseOne">
                                     <b class="me-1">Condition 1 : </b> Islam
                                 </button>
                             </h2>
@@ -139,6 +139,159 @@
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     as Allah accepts no deed from the disbeliever.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading2">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse2" aria-controls="collapse2">
+                                    <b class="me-1">Condition 2 : </b> Sanity
+                                </button>
+                            </h2>
+                            <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    The person who prays must have mental capacity.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading3">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse3" aria-controls="collapse3">
+                                    <b class="me-1">Condition 3 : </b> Discernment
+                                </button>
+                            </h2>
+                            <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Which is adulthood.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading4">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse4" aria-controls="collapse4">
+                                    <b class="me-1">Condition 4 : </b> Purity
+                                </button>
+                            </h2>
+                            <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    The person praying must be in a state of ritual purity, having performed wudu or
+                                    ghusl.
+                                    <br />
+                                    <a href="#chap2">Detailed in chapter 2</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading5">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse5" aria-controls="collapse4">
+                                    <b class="me-1">Condition 5 : </b> No Impurities on the Body, Clothes, and Place of
+                                    Prayer
+                                </button>
+                            </h2>
+                            <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    it is not permissible to pray in clothes or on a place that is contaminated with
+                                    najasa (impurities).
+                                    <br />
+                                    <a href="#chap2">also detailed in chapter 2</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading6">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse6" aria-controls="collapse6">
+                                    <b class="me-1">Condition 6 : </b>The ʿawrah (certain parts of the body) must be
+                                    covered.
+                                </button>
+                            </h2>
+                            <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    the 'awrah of a man is the area between the navel and the knees, and the 'awrah of a
+                                    woman is the entire body except the face and hands.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne_">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse7" aria-controls="collapse7">
+                                    <b class="me-1">Condition 7 : </b>Entry of the time for Prayer.
+                                </button>
+                            </h2>
+                            <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="headingOne_"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    each of the five daily prayers has a specific time window during which it must be
+                                    performed
+                                    , and the it is not valid if performed before its time , nor is it valid if
+                                    performed after its time has ended without an excuse that is recognized in the
+                                    Sharīʿah.
+                                    <br>
+                                    <b>Abu Qatadah reported: It was mentioned to the Prophet, peace and blessings be
+                                        upon him, that some of them missed the prayer while they slept and the Prophet
+                                        said</b>:
+                                    “It is not neglectful if missed (unintentionally) because of sleep. Verily, it is
+                                    only neglectful if missed while awake. If one of you forgets to pray or misses it by
+                                    sleeping, let him pray it as soon as he remembers."
+                                    <span class="text-end text-secondary">
+                                        Sunan al-Tirmidhī 177
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading7">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse8" aria-controls="collapse8">
+                                    <b class="me-1">Condition 8 : </b>Facing the Qiblah.
+                                </button>
+                            </h2>
+                            <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading7"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    it is obligatory to face the Qiblah (the direction of the Kaʿbah in Mecca) while
+                                    praying.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading8">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse9" aria-controls="collapse9">
+                                    <b class="me-1">Condition 9 : </b> Intention (Niyyah).
+                                </button>
+                            </h2>
+                            <div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading8"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    the person praying must have the intention in their heart to perform the prayer
+                                    for the sake of Allah alone.
+                                    <br>
+                                    <b>
+                                        Shaykh Ibn Baaz (may Allaah have mercy on him) said:
+                                    </b>
+                                    Speaking the intention is a bid'ah (innovation) and doing so loudly is even more
+                                    sinful. Rather the Sunnah is to make one’s intention in the heart, because Allaah
+                                    knows that which is secret and what is even more hidden. Allaah says (interpretation
+                                    of the meaning):
+
+                                    “Say: Will you inform Allaah of your religion while Allaah knows all that is in the
+                                    heavens and all that is in the earth?” [al-Hujuraat 49:16]
+
+                                    It was not narrated from the Prophet peace and blessings be upon him or the Sahaabah
+                                    or any of the most prominent imams that they spoke the intention out loud. From this
+                                    we may understand that it is not prescribed, rather it is an innovation that has
+                                    been introduced into the religion.[...]
                                 </div>
                             </div>
                         </div>
